# Backend/Progress.Domain/Api/Response/PromoResponse.cs
@@ -1,0 +1,6 @@
+﻿namespace Progress.Domain.Api.Response
+{
+  public class PromoResponse : ApiResult<PromoItem>
+  {
+  }
+}
