# Backend/Progress.Domain/Api/Response/PromoSetListResponse.cs
@@ -1,0 +1,6 @@
+﻿namespace Progress.Domain.Api.Response
+{
+  public class PromoSetListResponse : ApiResult<IEnumerable<PromoSet>>
+  {
+  }
+}
